--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Worktask</string>
+    <string name="title">Write meeting minutes</string>
+    <string name="startdate">8:30 27/07/2016 - </string>
+    <string name="duedate">10:00 27/07/2016</string>
+    <string name="status">Normal</string>
+    <string name="status_new">New</string>
+    <string name="status_impogress">Impogress</string>
+    <string name="status_resolved">Resolved</string>
+    <string name="status_closed">Closed</string>
+
 </resources>
