Load data from database and show in the list screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
         <item>Immediate</item>
     </string-array>
 
+    <string-array name="status">
+        <item>New</item>
+        <item>Inprogress</item>
+        <item>Resolved</item>
+        <item>Closed</item>
+    </string-array>
+
 </resources>
